# medical_claims_analysis

./: README.md  eda.py  makefile  normalization.py  prediction.py  preprocessor.py  pyproject.toml  trends_specialities.py
slides/: 1. trends_graph.py  1.trends_graph.py  2.june_issues.py  3.payers_graph.py  4.payers_speciailities.py  5.payers_trends.py
